engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_during_mcp_startup.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Select a review preset


› 1. Review against a base branch  (PR Style)
  2. Review uncommitted changes
  3. Review a commit
  4. Custom review instructions

  enter select · esc back
